# rtfs-ai

./: .gitignore  LICENSE  README.md  RTFS_NEXT_STEPS_UNIFIED.md  comments.txt  plan.md
.github/: copilot-instructions-old.md  (+1 more)
rtfs_compiler/: Cargo.toml  actual_ast.txt  debug_grammar.rs  debug_guard.rs  debug_test.rs  expected_ast.txt
rtfs_compiler/examples/: runtime_test_programs.rtfs
rtfs_compiler/src/: ast.rs  development_tooling.rs  enhanced_ir_demo.rs  enhanced_ir_optimizer.rs  integration_test_runner.rs  integration_tests.rs  ir.rs  ir_converter.rs  ir_demo.rs  ir_demo_complete.rs  ir_optimizer.rs  ir_optimizer_backup.rs  ir_optimizer_broken_original.rs  main.rs  main_enhanced_tests.rs  main_test_only.rs  next_steps_demo.rs  optimization_demo.rs  rtfs.pest  summary_demo.rs  test_runner.rs
rtfs_compiler/src/parser/: common.rs  expressions.rs  mod.rs  special_forms.rs  types.rs  utils.rs
rtfs_compiler/src/runtime/: environment.rs  error.rs  evaluator.rs  ir_runtime.rs  mod.rs  module_runtime.rs  stdlib.rs  values.rs
rtfs_compiler/src/tests/: cross_module_ir_tests.rs  mod.rs  module_loading_tests.rs
rtfs_compiler/test_modules/app/: calculator.rtfs  main.rtfs
rtfs_compiler/test_modules/circular/: a.rtfs  b.rtfs
rtfs_compiler/test_modules/dummy/: mod_0.rtfs  mod_1.rtfs  mod_2.rtfs  mod_3.rtfs  mod_4.rtfs  mod_5.rtfs  mod_6.rtfs  mod_7.rtfs  mod_8.rtfs  mod_9.rtfs
rtfs_compiler/test_modules/error/: mod.rtfs
rtfs_compiler/test_modules/math/: utils.rtfs
rtfs_compiler/test_modules/string/: helpers.rtfs
rtfs_compiler/test_runner/: Cargo.toml
(+106 files in other folders)
